# Quark_v1

./: .deepsource.toml  .gitignore  Cargo.toml  LICENSE  README.md  README_crates.io.md  build.rs  rust-project.json
.forgejo/workflows/: blank.yml  crates.io.yml  deepsource.yml  tests.yml
assets/logo/: README.md
examples/: basic.rs  cazic.rs  hello_world.rs  helloworld.rs
examples/frontend/basic/: index.html
examples/frontend/cazic/: README.md  index.html
examples/frontend/cazic/assets/: dot.txt
examples/frontend/cazic/boxicons/: README.md
examples/frontend/cazic/boxicons/css/: boxicons.min.css
examples/frontend/cazic/css/: metadata.css  themes.css
examples/frontend/cazic/javascript/: eventListeners.js  main.js  pages.js
examples/frontend/cazic/javascript/jsmediatags/: readTag.js
examples/frontend/helloworld/: index.html
examples/hello_world/: Cargo.toml
examples/hello_world/crowsa_examples/: index.html
examples/hello_world/src/: main.rs
hyaline/: Cargo.toml  README.md  build.rs  webview.h
hyaline/bindings/: Cargo.toml  build.rs
hyaline/src/: builder.rs  lib.rs  webview.rs
src/: cli.rs  config.rs  error.rs  lib.rs  prelude.rs  setup.rs
src/cli/: build_http.rs  build_static.rs  mod.rs
src/cli/bundle/: category.rs  common.rs  mod.rs  settings.rs
src/cli/bundle/linux/: common.rs  deb_bundle.rs  mod.rs
src/cli/bundle/macos/: mod.rs
src/cli/bundle/windows/: mod.rs
src/cli/package/: common.rs  mod.rs  settings.rs
src/webview/: Cargo.toml  README.md  binding.rs  builder.rs  mod.rs  webview.cc  webview.rs
src/webview/bindings/: Cargo.toml  build.rs
src/webview/bindings/src/: lib.rs
src/webview/ffi/: Platform_Linux.cpp  Platform_Windows-WebView2.h  Platform_Windows.cpp  Platform_macOS.c  lib.h  lib_impl.cpp  platform_darwin.c  platform_linux.cpp  platform_nt.cpp  webview_impl.cpp
src/webview/src/: webview.rs
tests/: cli-bundle.rs  main.rs
webview/: Cargo.toml  README.md
webview/bindings/: Cargo.toml  build.rs
webview/bindings/ext/: LICENSE  webview.h
webview/src/: webview.rs
