# format:
#
# package
# dependencies
# features
# profiles
# examples

[package]
name = "libquark"
version = "4.0.1"
description = "A lightweight alternative to Electron."
authors = ["Jaydon Nelson <xxdr@duck.com>"]
license = "MIT"
readme = "README_crates.md"
repository = "https://codeberg.org/pparaxan/Quark"
edition = "2021"
keywords = [ "web", "gui", "desktop" ]
categories = [ "gui", "web-programming" ]

[package.metadata.bundle]
name = "quark"
identifier = "com.xan.quark"
icon = ["assets/Logo/png/icon*.png"]
category = "DeveloperTool"
short_description = "An example of a bundled application"
long_description = "A trivial application that just displays a blank window with a title bar. It serves as an example of an application that can be bundled with cargo-bundle, as well as a test-case for cargo-bundle's support for bundling crate examples."

[dependencies]
hyaline = { git = "https://codeberg.org/pparaxan/Hyaline.git", rev = "46d4bdd8f4" }
include_dir = "0.7.4"
tiny_http = "0.12.0"
ar = "0.9"
cab = "0.4"
cargo_metadata = "0.15"
chrono = "0.4"
dirs = "1.0"
error-chain = "0.12"
glob = "0.3"
icns = "0.3"
image = "0.12"
libflate = "1.2"
md5 = "0.7"
msi = "0.6"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1"
strsim = "0.10"
tar = "0.4"
target_build_utils = "0.3"
term = "0.4"
toml = "0.5"
uuid = { version = "1", features = ["v5"] }
walkdir = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
strip = true

[[example]]
name = "helloworld"
path = "examples/helloworld.rs"
