cargo-features = ["edition2024"]

[package]
name = "hyaline"
version = "1.0.0"
description = "Official Webview Rust bindings."
authors = [
  "Lucas Fernandes Gonçalves Nogueira <lucas@tauri.studio>",
  "Daniel Thompson-Yvetot <denjell@sfosc.org>",
  "Tensor Programming <tensordeveloper@gmail.com>",
  "Serge Zaitsev <zaitsev.serge@gmail.com>",
  "Ngo Iok Ui <wusyong9104@gmail.com>",
  "Jaydon Nelson <xxdr@duck.com>"
]
license = "MIT OR Apache-2.0"
edition = "2024"

[build-dependencies]
cc = "1.1"
pkg-config = "0.3"
