# cargo-features = ["edition2024"]

[package]
name = "hyaline"
version = "0.2.1"
description = "Official Webview Rust bindings."
authors = [
  "Lucas Fernandes Gonçalves Nogueira <lucas@tauri.studio>",
  "Daniel Thompson-Yvetot <denjell@sfosc.org>",
  "Tensor Programming <tensordeveloper@gmail.com>",
  "Serge Zaitsev <zaitsev.serge@gmail.com>",
  "Jaydon \"xan\" Nelson <xxdr@duck.com>"
]
license = "MIT OR Apache-2.0"
edition = "2021"
keywords = [ "web", "gui", "desktop", "webkit" ]
categories = [ "gui", "api-bindings" ]

[dependencies]
hyaline-bindings = { path = "bindings" }
