cargo-features = ["edition2024"]

[package]
name = "hyaline-bindings"
version = "1.0.0"
description = "Official Webview FFI bindings."
authors = [
  "Ngo Iok Ui <wusyong9104@gmail.com>",
  "Jaydon Nelson <xxdr@duck.com>"
]
license = "MIT OR Apache-2.0"
edition = "2024"

[build-dependencies]
cc = "1.1"
pkg-config = "0.3"
