cargo-features = ["edition2024"]

[package]
name = "hyaline-bindings"
version = "0.1.3"
description = "Official Webview FFI bindings."
authors = [
  "Ngo Iok Ui <wusyong9104@gmail.com>",
  "Jaydon \"xan\" Nelson <xxdr@duck.com>"
]
license = "MIT OR Apache-2.0"
repository = "https://codeberg.org/XDR/Crowsa/src/branch/master/src/webview/bindings"
edition = "2024"

[build-dependencies]
cc = "1.1"
pkg-config = "0.3"
